# SoftRendering

./: CMakeLists.txt  CustomDraw.cpp  CustomFrame.cpp  CustomFrame.h  CustomTexture.cpp  CustomTexture.h  MainGame.cpp  MainGame.h  Modele3D.cpp  Modele3D.h  README.md  TODO.md  constants.h  main.cpp  memory.hpp  regex_literals.h
res/: ground.mtl  present.mtl  present_up.mtl  scene.blend  scene.blend1  test.mtl  tree.mtl
